Updated button hover, active and focus states. And corrected vertical alignment of button texts.

--- a/modules/shared/styles/config/mixins/_icon.scss
+++ b/modules/shared/styles/config/mixins/_icon.scss
@@ -82,9 +82,8 @@
   cursor: pointer;
 
   span {
-    display: block;
-    position: absolute;
-    top: 0;
+    position: relative;
+    top: -1px;
   }
 }
 
@@ -141,6 +140,68 @@
   &:hover,
   &:active {
     @extend %icon-button-text-box-hover;
+
+    &::before {
+      @extend %#{"dp-" + $icon + if(str-length($hover-state) > 0, "-", "") + $hover-state + "-icon"};
+    }
+  }
+}
+
+%icon-button-text-box-flat {
+  @extend %icon-button-text-box;
+
+  border: none;
+  background-color: transparent;
+  color: $primary-dark;
+}
+
+%icon-button-text-box-flat-extra {
+  @extend %icon-button-text-box-extra;
+}
+
+%icon-button-text-box-flat-hover {
+  @extend %icon-button-text-box-hover;
+
+  border: none;
+}
+
+@mixin icon-button-text-box-flat-left($icon, $state: "", $hover-state: "red") {
+  @extend %icon-button-text-box-flat;
+
+  padding-right: 10px + $button-size;
+
+  &::after {
+    @extend %#{"dp-" + $icon + if(str-length($state) > 0, "-", "") + $state + "-icon"};
+    @extend %icon-button-text-box-flat-extra;
+
+    top: 0;
+    right: 0;
+  }
+
+  &:hover,
+  &:active {
+    @extend %icon-button-text-box-flat-hover;
+
+    &::after {
+      @extend %#{"dp-" + $icon + if(str-length($hover-state) > 0, "-", "") + $hover-state + "-icon"};
+    }
+  }
+}
+
+@mixin icon-button-text-box-flat-right($icon, $state: "", $hover-state: "red") {
+  @extend %icon-button-text-box-flat;
+
+  padding-left: $button-size;
+
+  &::before {
+    @extend %#{"dp-" + $icon + if(str-length($state) > 0, "-", "") + $state + "-icon"};
+    @extend %icon-button-text-box-flat-extra;
+    left: 0;
+  }
+
+  &:hover,
+  &:active {
+    @extend %icon-button-text-box-flat-hover;
 
     &::before {
       @extend %#{"dp-" + $icon + if(str-length($hover-state) > 0, "-", "") + $hover-state + "-icon"};
